--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-async-storage/async-storage": "^1.19.0",
     "@walletconnect/encoding": "^1.0.2",
     "@walletconnect/modal-react-native": "^1.0.0-rc.3",
+    "@walletconnect/sign-client": "^2.8.6",
     "axios": "^1.4.0",
     "ethers": "^5.7.2",
     "react": "18.2.0",
